# ChangeLog for net-www/mod_log_sql
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/mod_log_sql/Attic/ChangeLog,v 1.9 2004/05/14 14:40:00 zul Exp $

  15 May 2004; Chuck Short <zul@gentoo.org> mod_log_sql-1.96.ebuild:
  Removed old version.

  15 May 2004; Chuck Short <zul@gentoo.org> mod_log_sql-1.97.ebuild:
  Marked stable for x86.

*mod_log_sql-1.98 (15 May 2004)

  15 May 2004; Chuck Short <zul@gentoo.org> mod_log_sql-1.98.ebuild:
  Version bump, closes #50983.

  12 May 2004; Chuck Short <zul@gentoo.org> mod_log_sql-1.97.ebuild,
  files/10_mod_log_sql.conf, files/10_mod_log_sql_apache2.conf:
  Added extra module to be loaded. Closes #50277.

  07 May 2004; Chuck Short <zul@gentoo.org> mod_log_sql-1.97.ebuild,
  files/mod_log_sql-1.97-gentoo.patch:
  Added patch so that mod_log_sql can compile properly. Closes #50277.

  03 May 2004; Michael Sterrett <mr_bones_@gentoo.org>
  mod_log_sql-1.96.ebuild, mod_log_sql-1.97.ebuild:
  don't use deprecated ? : use syntax; don't assign default to S; tidy

*mod_log_sql-1.97 (04 May 2004)

  04 May 2004; Chuck Short <zul@gentoo.org> mod_log_sql-1.97.ebuild:
  Version bump, closes #49553.

  30 Apr 2004; David Holm <dholm@gentoo.org> mod_log_sql-1.96.ebuild:
  Added to ~ppc.

*mod_log_sql-1.96 (30 Apr 2004)

  30 Apr 2004; Chuck Short <zul@gentoo.org> mod_log_sql-1.96.ebuild,
  files/10_mod_log_sql.conf, files/10_mod_log_sql_apache2.conf:
  Initial version, ebuild written by Perolo Silantico < per.sil@gmx.it >.
  Closes #14891.
