@@ -1,6 +1,6 @@
-MD5 8785ce79dc43800adf31c021554d990f mod_log_sql-1.98.ebuild 3112
-MD5 5230dc7484c89406a21e2c9a4efc333f mod_log_sql-1.97.ebuild 3110
-MD5 26ccb6049eba0cc303a074bbb447cf12 ChangeLog 1562
+MD5 45cb99ac742f0a1e024f7a9390aa60b4 mod_log_sql-1.98.ebuild 2845
+MD5 71861f63f003e5f4e98889bfff41e249 mod_log_sql-1.97.ebuild 3109
+MD5 aac713f177072d6a1034ac9252d4986e ChangeLog 1740
 MD5 5b6dd438f81019e56fa641841c0c13fe metadata.xml 501
 MD5 7a6e57cfb8898c79734fcf40291206cb files/digest-mod_log_sql-1.97 68
 MD5 37cf2cb766664bd12fc8af5c9dd4444f files/digest-mod_log_sql-1.98 68
