@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/mod_log_sql/Attic/mod_log_sql-1.98.ebuild,v 1.1 2004/05/14 14:34:08 zul Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mod_log_sql/Attic/mod_log_sql-1.98.ebuild,v 1.2 2004/06/14 02:16:47 zul Exp $
 
 inherit eutils
 
@@ -11,11 +11,10 @@ SRC_URI="http://www.outoforder.cc/downloads/mod_log_sql/${P}.tar.gz"
 LICENSE="Apache-1.1"
 SLOT="0"
 KEYWORDS="~x86 ~ppc"
-IUSE=""
+IUSE="ssl"
 
 DEPEND=">=dev-db/mysql-3.23.15
-	apache2? ( =net-www/apache-2* )
-	!apache2? ( >=net-www/apache-1* )"
+	>=net-www/apache-1*"
 
 detectapache() {
 	local domsg=
@@ -73,9 +72,7 @@ src_compile() {
 src_install() {
 	detectapache
 	exeinto ${APACHE_MODULES_DIR}
-	doexe .libs/${PN}.so .libs/mod_log_sql_mysql.so
-
-	use ssl && doexe .libs/mod_log_sql_ssl.so
+	doexe mod_log_sql_mysql.so
 
 	cat ${CONFIG_FILE} | sed -e "s#machine_id#`hostname -f`#" > 10_mod_log_sql.conf
 	insinto ${APACHE_MODULES_CONFIG_DIR}
@@ -87,12 +84,7 @@ src_install() {
 }
 
 pkg_postinst() {
-	detectapache
-	if [ "$APACHEVER" == "2" ]; then
-	        einfo "Please add '-D LOG_SQL' to your /etc/conf.d/apache2 APACHE2_OPTS setting."
-	else
-	        einfo "Please add '-D LOG_SQL' to your /etc/conf.d/apache APACHE_OPTS setting"
-	fi
+	einfo "Please add '-D LOG_SQL' to your /etc/conf.d/apache APACHE_OPTS setting"
 
 	einfo "Do not forget to adapt ${APACHE_MODULES_CONFIG_DIR}/10_mod_log_sql.conf to your needs."
 	einfo "See /usr/share/doc/${PF}/contrib/create_tables.sql.gz on how to create logging tables.\n"
