@@ -1,6 +1,10 @@
 # ChangeLog for net-www/mod_log_sql
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/mod_log_sql/Attic/ChangeLog,v 1.9 2004/05/14 14:40:00 zul Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mod_log_sql/Attic/ChangeLog,v 1.10 2004/06/14 02:16:47 zul Exp $
+
+  13 Jun 2004; Chuck Short <zul@gentoo.org> mod_log_sql-1.98.ebuild:
+  Removed apache2 support. Ebuild does not detect where are our header files are
+  properly. Closes #52739.
 
   15 May 2004; Chuck Short <zul@gentoo.org> mod_log_sql-1.96.ebuild:
   Removed old version.
